# ThinkingInTypes_Examples

./: .gitignore  Justfile  LICENSE  README.md  RunAllPythonExamplesParallel.ps1  ValidateExampleOutput.ps1  bootstrap.py  go.ps1  log.txt  mypy.ini  pyproject.toml  tasks.py
03_what_is_a_type/: example_1.py  example_10.py  example_11.py  example_12.py  example_2.py  example_3.py  example_4.py  example_5.py  example_6.py  example_7.py  example_8.py  example_9.py  int_and_string.cpp
04_predefined_types/: example_1.py  example_13.py  example_17.py  example_6.py  example_7.py  example_8.py
04_using_types/: example_10.py  example_13.py  example_14.py  example_15.py  example_16.py  example_2.py  example_4.py  example_5.py  example_6.py  example_8.py  union_plus_optional.py
05_custom_types/: birth_date.py  dataclass_composition.py  dataclasses_and_enums.py  ddd.py  example_1.py  example_4.py  example_5.py  example_7.py  example_9.py  frozen_data_classes.py  int_stars.py  literal_to_set.py  literal_types.py  messenger.py  month_data_class.py  named_tuple.py  new_type.py  param_keyword.py  simple_new_type.py  simple_type_aliasing.py  stars.py  stars_class.py
06_immutability/: frozen_data_classes.py  modify_stars.py  named_tuple.py
06_pattern_matching/: double_star_wildcard.py  example_10.py  example_11.py  example_12.py  example_14.py  example_15.py  example_16.py  example_17.py  example_18.py  example_19.py  example_2.py  example_3.py  example_4.py  example_5.py  example_6.py  example_7.py  example_8.py  example_9.py  nested_patterns.py  subject_annotations.py  wildcard_ignore_elements.py
07_immutability/: example_1.py  example_2.py  example_3.py  example_4.py  example_5.py  example_6.py  example_7.py  example_8.py  example_9.py
07_pattern_matching/: example_11.py  example_12.py  example_16.py  example_18.py  example_8.py  nested_patterns.py  subject_annotations.py  wildcard_ignore_elements.py  wildcard_ignore_value.py
08_generics/: animals.py  box.py  constrained_typevar.py  contravariance.py  covariance.py  drawable.py  example_1.py  example_10.py  example_11.py  example_12.py  example_13.py  example_15.py  example_16.py  example_17.py  example_18.py  example_20.py  example_21.py  example_22.py  example_23.py  example_24.py  example_25.py  example_26.py  example_27.py  example_28.py  example_29.py  example_3.py  example_30.py  example_5.py  example_6.py  example_7.py  example_8.py  example_9.py  f_bounded_polymorphism.py  file_protocol.py  generic_alias.py  generic_currying_decorator.py  iterable_protocol.py  pseudo_currying.py  (+5 more)
(+587 files in other folders)
