[project]
name = "thinkingintypes-examples"
version = "0.1.0"
description = "Examples from the book ThinkingInTypes.com"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "returns>=0.25.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]  # Look for packages in the root directory
include = ["*"]  # Include all directories with __init__.py files
namespaces = false  # Don't include namespace packages (directories without __init__.py)

[dependency-groups]
dev = [
    "docformatter>=1.7.5",
    "ruff>=0.11.2",
]
