# pyproject.toml
[project]
name = "thinkingintypes-examples"
version = "0.1.0"
description = "Examples from the book ThinkingInTypes.com"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pybooktools",
    "pyinvoke>=1.0.4",
    "returns>=0.25.0",
    "rich>=14.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]  # Look for packages in the root directory
include = ["*"]  # Include all directories with __init__.py files
namespaces = false  # Don't include namespace packages (directories without __init__.py)

[dependency-groups]
dev = [
    "docformatter>=1.7.5",
    "pybooktools",
    "pyinvoke>=1.0.4",
    "rich>=14.0.0",
    "ruff>=0.11.2",
]

#[tool.docformatter]
#recursive = true
#wrap-summaries = 50
#wrap-descriptions = 50
#close-quotes-on-newline  = true
#-make-summary-multi-line = true
#blank = true
#style = "epytext"

[tool.uv.sources]
pybooktools = { path = "../pybooktools", editable = true }
